--- a/aboutme.html
+++ b/aboutme.html
@@ -73,7 +73,7 @@
     <div class="social-icons">
       <a href="https://github.com/Andoryu-san" target="_blank" class="social-icon"><i class="fa-brands fa-github"> github.com/Andoryu-san</i></a>
       <a href="https://www.youtube.com/channel/UCutd4_sp0ZOPppcAdwELYGA" target="_blank" class="social-icon"><i class="fa-brands fa-youtube"> @theonlyhitmanro</i></a>
-      <a href="#" target="_blank" class="social-icon"><i class="fa-brands fa-telegram"> t.me/learnwebwithando</i></a>
+      <a href="https://t.me/+TyylOdxPSbKXzMq0" target="_blank" class="social-icon"><i class="fa-brands fa-telegram"> learnwebwithando</i></a>
     </div>
   </footer>
 
